Fixed header icon display change, changed switch font back to normal, started setting up sunrise/sunset time zone fix

--- a/src/style.css
+++ b/src/style.css
@@ -242,9 +242,9 @@ hr {
   transform: translateX(var(--height));
 }
 
-.temperature-toggle-units {
+/* .temperature-toggle-units {
   font-weight: bold;
-}
+} */
 
 #footer {
   margin-top: 30px;
